<resources>
    <string name="app_name">C M F</string>
    <string name="action_settings">Settings</string>
    <string name="langue_test">This is a test</string>
    <string name="langue_test2" translatable="false">Message message message message message message\nMessage message message message message\nMessage message message message message message\nMessage message message\nMessage message message message message</string>
    <string name="plus">+</string>
    <string name="unitPerSec">u/m</string>
    <string name="stock">Stock :</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="connection">Connection</string>
    <string name="empty" />
    <string name="loading">LOADING</string>
    <string name="pseudo">Pseudo</string>
    <string name="mail">Mail</string>
    <string name="abort">Abort</string>
    <string name="validate">Validate</string>
    <string name="cash">$$$$$</string>
    <string name="messages">Messages</string>
    <string name="ok">OK</string>
    <string name="Hours" translatable="false">13:37</string>
    <string name="date">00/00/0000</string>
    <string name="cancel">Cancel</string>
    <string name="level">Level : </string>
    <string name="advertising">Advertising</string>
    <string name="login_feedback_success">Connecting</string>
    <string name="login_feedback_failed">Connection failed</string>
    <string name="registration_feedback_success">Registration successful</string>
    <string name="registration_feedback_already_used">Username already used!</string>
    <string name="registration_feedback_failed">Registration failed</string>
    <string name="sell">Sell</string>
    <string name="selling">Sell All</string>
    <string name="SellCookies">Sell all the cookies</string>
    <string name="sellDonuts">Sell all the donuts</string>
    <string name="sellCupcakes">Sell all the cupcakes</string>
    <string name="number" translatable="false">(0)</string>
    <string name="disconnect">Disconnect</string>
    <string name="designer">Designer</string>
    <string name="save_on_device">Save on device</string>
    <string name="publish">Publish</string>
    <string name="select_a_cake">Select a cake</string>
    <string name="upgrade_valid">Are you sure you want to start the improvement?\nIt will cost you </string>
    <string name="max_level">This element is already at the maximum level</string>
    <string name="graph_top_value" translatable="false">15 $/u</string>
    <string name="graph_middle_value" translatable="false">10 $/u</string>
    <string name="graph_lower_value" translatable="false">5 $/u</string>

    <string name="vote_already_cast">You\'ve already voted.</string>
    <string name="vote_cast">Vote registered.</string>

    <string name="profile_title">Profile</string>
    <string name="profile_labels">Username : \nRegistered : \nLevel : \nTop Score : \nBest Rank : </string>
    <string name="profile_values" translatable="false">%1$s\n%2$s\n%3$d\n%4$d\n%5$d</string>
    <string name="purchase_succesful">Factory purchase was successful!</string>
    <string name="purchase_not_enough_score">You need %1$d$ to buy this.</string>
    <string name="purchase_failure">Purchase failure</string>

    <string name="line_price">This line costs </string>
    <string name="buy_line_error">Not enough money to buy this line</string>

    <string name="market_sell_error">Error when trying to retrieve stocks.</string>
    <string name="market_sell_failed">Could not sell your stocks.</string>
    <string name="market_sell_confirm">Sales confirmed !</string>

    <string name="sell_all_info">Sold %1$d %2$s worth %3$d$.</string>

    <string name="factory_stock_display" translatable="false">%1$d/%2$d</string>
    <string name="factory_buy_alert">Do you really want to buy this factory for %1$d$ ?</string>

    <string name="market_time_info">Time remaining before the end of the week.\n
                At the end of every week, all companies are reset back to zero : factories, stocks, money …\n
                The 3 best players will have a place in the winner\'s gallery.\n
                Your best score is recorded, and your level increases depending on your final score.</string>

    <string name="market_votes_info">You can only vote for one cake per hour !\n
                When the hour ends, the cake with the most votes will be advertised !\n
                The price of advertised cakes will rise, and earn you more money.\n
                The cake with the least amount of votes will become less popular, and see its price fall…\n</string>

</resources>
