<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/title"
        android:contentDescription="@string/empty"
        android:layout_marginBottom="100dp"/>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/loginLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/login"
            android:background="@drawable/edittext_selector"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/edittext_selector"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/loginRegister"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/register"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/loginConnection"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:text="@string/connection"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>