<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/title"
        android:contentDescription="@string/empty"
        android:layout_marginBottom="100dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/text_color_states"
            android:textAlignment="center"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/popup"
        android:layout_margin="20dp"
        android:padding="20dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo"/>
            <EditText
                android:id="@+id/registrationUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pseudo"
                android:inputType="textPersonName"
                android:background="@drawable/edittext_selector"
                tools:ignore="Autofill"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"/>
            <EditText
                android:id="@+id/registrationEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittext_selector"
                tools:ignore="Autofill"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/registrationPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/edittext_selector"
                tools:ignore="Autofill"/>
            <TextView
                android:id="@+id/registrationFeedbackMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/registrationCancel"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/abort"
                    android:background="@drawable/red_button_selector"
                    android:textColor="@color/buttonRedText"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/registrationValidate"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/validate"
                    android:background="@drawable/green_button_selector"
                    android:textColor="@color/buttonGreenText"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>