<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/title"
        android:contentDescription="@string/empty"
        android:layout_marginBottom="100dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/text_color_states"
            android:textAlignment="center"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/popup"
        android:layout_margin="20dp"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pseudo"/>

            <EditText
                android:id="@+id/etSignupPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pseudo"
                android:inputType="textPersonName"
                tools:ignore="Autofill"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"/>

            <EditText
                android:id="@+id/etSignupMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/etSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/bMainSignUp"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/abort"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/bMailSignIn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/validate"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>