<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="270dp" >
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/popup_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/popup"
        android:gravity="bottom">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <TextView
                android:id="@+id/popupUpgradeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/langue_test2"
                android:layout_gravity="center_horizontal"/>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/popupUpgradeCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="7dp"
                android:text="@string/cancel"
                android:textColor="@color/buttonRedText"
                android:background="@drawable/red_button_selector"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/popupUpgradeOk"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="7dp"
                android:text="@string/ok"
                android:textColor="@color/buttonGreenText"
                android:background="@drawable/green_button_selector"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
    <!-- TOP IMAGE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">
        <FrameLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup"
            android:padding="7dp"
            android:layout_gravity="center"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/popupUpgradeImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/title"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="5dp"
                android:contentDescription="@string/empty" />
        </FrameLayout>
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="bottom">
            <TextView
                android:id="@+id/popupUpgradeLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAlignment="center"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>