<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp">

    <!-- TOP IMAGE -->


    <FrameLayout
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:background="@drawable/dark_frame2"/>

    <LinearLayout
        android:padding="10dp"
        android:background="@drawable/popup2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/message_letter"
                android:contentDescription="@string/empty" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/text_color_states"
                android:text="@string/langue_test"
                android:textSize="25sp"
                android:gravity="bottom"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/langue_test2"
                    />

            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>