<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="270dp" >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/popup_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/popup"
        android:gravity="bottom">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/langue_test2"
                android:layout_gravity="center_horizontal"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/popup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingTop="7dp"
                android:paddingRight="30dp"
                android:paddingBottom="7dp"
                android:text="@string/ok"/>
        </LinearLayout>

    </LinearLayout>

    <!-- TOP IMAGE -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >
        <FrameLayout
            android:id="@+id/constraintLayout"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/popup"
            android:padding="7dp"
            android:layout_gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/title"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="5dp"
                android:contentDescription="@string/empty" />
        </FrameLayout>

    </FrameLayout>


</FrameLayout>